(lang dune 3.10)

(name pfds)

(generate_opam_files true)

(source
 (github intgrah/pfds))

(authors "Jeremy Chen")

(license LICENSE.md)

(package
 (name pfds)
 (synopsis "Purely functional data structures")
 (description "Purely functional data structures")
 (depends ocaml dune)
 (tags (data-structures)))
